# packages/schema/openapi.json
@@ -695,6 +695,12 @@
       "D1Result": {
         "additionalProperties": false,
         "properties": {
+          "columns": {
+            "items": {
+              "type": "string"
+            },
+            "type": ["array", "null"]
+          },
           "meta": {
             "$ref": "#/components/schemas/D1Meta"
           },
@@ -819,140 +825,6 @@
         "required": ["binding", "database_id"],
         "type": "object"
       },
-      "DatabaseMetrics": {
-        "additionalProperties": false,
-        "properties": {
-          "$schema": {
-            "description": "A URL to the JSON Schema for this object.",
-            "examples": ["https://example.com/schemas/DatabaseMetrics.json"],
-            "format": "uri",
-            "readOnly": true,
-            "type": "string"
-          },
-          "available": {
-            "type": "boolean"
-          },
-          "duration_bucket_0_5": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_1": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_10": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_100": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_1000": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_25": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_250": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_2_5": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_5": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_50": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_500": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_bucket_inf": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "p50_duration_ms": {
-            "format": "double",
-            "type": "number"
-          },
-          "p99_duration_ms": {
-            "format": "double",
-            "type": "number"
-          },
-          "queries": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "read_queries": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "rows_read": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "rows_returned": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "rows_written": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "storage_bytes": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "table_count": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "total_duration_ms": {
-            "format": "double",
-            "type": "number"
-          },
-          "write_queries": {
-            "format": "int64",
-            "type": "integer"
-          }
-        },
-        "required": [
-          "available",
-          "queries",
-          "read_queries",
-          "write_queries",
-          "rows_read",
-          "rows_returned",
-          "rows_written",
-          "storage_bytes",
-          "table_count",
-          "total_duration_ms",
-          "p50_duration_ms",
-          "p99_duration_ms",
-          "duration_bucket_0_5",
-          "duration_bucket_1",
-          "duration_bucket_2_5",
-          "duration_bucket_5",
-          "duration_bucket_10",
-          "duration_bucket_25",
-          "duration_bucket_50",
-          "duration_bucket_100",
-          "duration_bucket_250",
-          "duration_bucket_500",
-          "duration_bucket_1000",
-          "duration_bucket_inf"
-        ],
-        "type": "object"
-      },
       "DatabaseMetricsTimeseries": {
         "additionalProperties": false,
         "properties": {
@@ -965,6 +837,12 @@
           },
           "available": {
             "type": "boolean"
+          },
+          "duration_total_ms": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           },
           "p50_latency_ms": {
             "items": {
@@ -1002,6 +880,12 @@
             },
             "type": ["array", "null"]
           },
+          "rows_returned": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
           "rows_written": {
             "items": {
               "$ref": "#/components/schemas/MetricPoint"
@@ -1033,9 +917,11 @@
           "read_queries",
           "write_queries",
           "rows_read",
+          "rows_returned",
           "rows_written",
           "storage_bytes",
           "table_count",
+          "duration_total_ms",
           "p50_latency_ms",
           "p95_latency_ms",
           "p99_latency_ms"
@@ -1300,12 +1186,12 @@
         "required": ["id", "name", "created_at"],
         "type": "object"
       },
-      "KVNamespaceMetrics": {
+      "KVNamespaceMetricsTimeseries": {
         "additionalProperties": false,
         "properties": {
           "$schema": {
             "description": "A URL to the JSON Schema for this object.",
-            "examples": ["https://example.com/schemas/KVNamespaceMetrics.json"],
+            "examples": ["https://example.com/schemas/KVNamespaceMetricsTimeseries.json"],
             "format": "uri",
             "readOnly": true,
             "type": "string"
@@ -1314,16 +1200,22 @@
             "type": "boolean"
           },
           "reads": {
-            "format": "int64",
-            "type": "integer"
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           },
           "size": {
-            "format": "int64",
-            "type": "integer"
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           },
           "writes": {
-            "format": "int64",
-            "type": "integer"
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           }
         },
         "required": ["available", "reads", "writes", "size"],
@@ -1784,12 +1676,12 @@
         "required": ["binding", "bucket_id"],
         "type": "object"
       },
-      "ObjectStorageBucketMetrics": {
+      "ObjectStorageBucketMetricsTimeseries": {
         "additionalProperties": false,
         "properties": {
           "$schema": {
             "description": "A URL to the JSON Schema for this object.",
-            "examples": ["https://example.com/schemas/ObjectStorageBucketMetrics.json"],
+            "examples": ["https://example.com/schemas/ObjectStorageBucketMetricsTimeseries.json"],
             "format": "uri",
             "readOnly": true,
             "type": "string"
@@ -1798,16 +1690,22 @@
             "type": "boolean"
           },
           "reads": {
-            "format": "int64",
-            "type": "integer"
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           },
           "size": {
-            "format": "int64",
-            "type": "integer"
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           },
           "writes": {
-            "format": "int64",
-            "type": "integer"
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
           }
         },
         "required": ["available", "reads", "writes", "size"],
@@ -2691,6 +2589,81 @@
         "required": ["key", "size"],
         "type": "object"
       },
+      "WorkerMetricsTimeseries": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": ["https://example.com/schemas/WorkerMetricsTimeseries.json"],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "available": {
+            "type": "boolean"
+          },
+          "duration_avg_ms": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "duration_ms_per_second": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "duration_p95_ms": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "error_rate": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "errors": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "p95_latency_ms": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "requests": {
+            "items": {
+              "$ref": "#/components/schemas/MetricPoint"
+            },
+            "type": ["array", "null"]
+          },
+          "status_codes": {
+            "items": {
+              "$ref": "#/components/schemas/WorkerStatusCodeTimeseries"
+            },
+            "type": ["array", "null"]
+          }
+        },
+        "required": [
+          "available",
+          "requests",
+          "errors",
+          "error_rate",
+          "p95_latency_ms",
+          "status_codes",
+          "duration_avg_ms",
+          "duration_p95_ms",
+          "duration_ms_per_second"
+        ],
+        "type": "object"
+      },
       "WorkerOutputLine": {
         "additionalProperties": false,
         "properties": {
@@ -2714,105 +2687,20 @@
         "required": ["timestamp", "level", "message"],
         "type": "object"
       },
-      "WorkerStatusCode": {
+      "WorkerStatusCodeTimeseries": {
         "additionalProperties": false,
         "properties": {
           "code": {
             "type": "string"
           },
-          "value": {
-            "format": "double",
-            "type": "number"
-          }
-        },
-        "required": ["code", "value"],
-        "type": "object"
-      },
-      "WorkerTraffic": {
-        "additionalProperties": false,
-        "properties": {
-          "$schema": {
-            "description": "A URL to the JSON Schema for this object.",
-            "examples": ["https://example.com/schemas/WorkerTraffic.json"],
-            "format": "uri",
-            "readOnly": true,
-            "type": "string"
-          },
-          "available": {
-            "type": "boolean"
-          },
-          "bundle_size": {
-            "format": "int64",
-            "type": "integer"
-          },
-          "duration_ms_avg": {
-            "format": "double",
-            "type": "number"
-          },
-          "duration_ms_p95": {
-            "format": "double",
-            "type": "number"
-          },
-          "duration_ms_per_second": {
-            "format": "double",
-            "type": "number"
-          },
-          "duration_series": {
+          "points": {
             "items": {
-              "format": "double",
-              "type": "number"
-            },
-            "type": ["array", "null"]
-          },
-          "error_rate": {
-            "format": "double",
-            "type": "number"
-          },
-          "errors": {
-            "format": "double",
-            "type": "number"
-          },
-          "invocations": {
-            "format": "double",
-            "type": "number"
-          },
-          "p95_latency": {
-            "format": "double",
-            "type": "number"
-          },
-          "requests_per_second": {
-            "format": "double",
-            "type": "number"
-          },
-          "status_codes": {
-            "items": {
-              "$ref": "#/components/schemas/WorkerStatusCode"
-            },
-            "type": ["array", "null"]
-          },
-          "traffic": {
-            "items": {
-              "format": "double",
-              "type": "number"
+              "$ref": "#/components/schemas/MetricPoint"
             },
             "type": ["array", "null"]
           }
         },
-        "required": [
-          "available",
-          "requests_per_second",
-          "p95_latency",
-          "error_rate",
-          "invocations",
-          "errors",
-          "bundle_size",
-          "traffic",
-          "status_codes",
-          "duration_ms_avg",
-          "duration_ms_p95",
-          "duration_ms_per_second",
-          "duration_series"
-        ],
+        "required": ["code", "points"],
         "type": "object"
       }
     },
@@ -4709,98 +4597,6 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DatabaseMetrics"
-                }
-              }
-            },
-            "description": "Success"
-          },
-          "400": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OpenAPIError"
-                }
-              }
-            },
-            "description": "Error"
-          },
-          "401": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OpenAPIError"
-                }
-              }
-            },
-            "description": "Error"
-          },
-          "403": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OpenAPIError"
-                }
-              }
-            },
-            "description": "Error"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OpenAPIError"
-                }
-              }
-            },
-            "description": "Error"
-          },
-          "500": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OpenAPIError"
-                }
-              }
-            },
-            "description": "Error"
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "summary": "getDatabaseMetrics",
-        "tags": ["Databases"]
-      }
-    },
-    "/v1/organizations/{orgID}/databases/{databaseID}/analytics/timeseries": {
-      "get": {
-        "operationId": "getDatabaseMetricsTimeseries",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "orgID",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "in": "path",
-            "name": "databaseID",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
                   "$ref": "#/components/schemas/DatabaseMetricsTimeseries"
                 }
               }
@@ -4863,7 +4659,7 @@
             "bearerAuth": []
           }
         ],
-        "summary": "getDatabaseMetricsTimeseries",
+        "summary": "getDatabaseMetrics",
         "tags": ["Databases"]
       }
     },
@@ -5815,7 +5611,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/KVNamespaceMetrics"
+                  "$ref": "#/components/schemas/KVNamespaceMetricsTimeseries"
                 }
               }
             },
@@ -7446,7 +7242,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ObjectStorageBucketMetrics"
+                  "$ref": "#/components/schemas/ObjectStorageBucketMetricsTimeseries"
                 }
               }
             },
@@ -8687,9 +8483,9 @@
         "tags": ["Workers"]
       }
     },
-    "/v1/organizations/{orgID}/workers/{workerID}/analytics/traffic": {
+    "/v1/organizations/{orgID}/workers/{workerID}/analytics": {
       "get": {
-        "operationId": "getWorkerTraffic",
+        "operationId": "getWorkerMetrics",
         "parameters": [
           {
             "in": "path",
@@ -8713,7 +8509,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WorkerTraffic"
+                  "$ref": "#/components/schemas/WorkerMetricsTimeseries"
                 }
               }
             },
@@ -8775,7 +8571,7 @@
             "bearerAuth": []
           }
         ],
-        "summary": "getWorkerTraffic",
+        "summary": "getWorkerMetrics",
         "tags": ["Workers"]
       }
     },
